--- a/package.json
+++ b/package.json
@@ -16,12 +16,11 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
-    "@react-native-checkbox/checkbox": "^0.5.8",
-    "@react-native-community/checkbox": "^0.5.17",
     "@react-native-community/datetimepicker": "8.2.0",
+    "@react-native-picker/picker": "2.9.0",
     "@react-navigation/bottom-tabs": "^7.0.0",
     "@react-navigation/drawer": "^7.0.4",
-    "@react-navigation/native": "^7.0.0",
+    "@react-navigation/native": "^7.0.4",
     "@react-navigation/stack": "^7.0.3",
     "axios": "^1.7.7",
     "expo": "~52.0.7",
@@ -46,7 +45,7 @@
     "react-native-screens": "~4.1.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.2",
-    "@react-native-picker/picker": "2.9.0"
+    "react-navigation": "^5.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
