--- a/app.json
+++ b/app.json
@@ -30,8 +30,7 @@
         {
           "image": "./assets/images/logo-tcc.png",
           "imageWidth": 200,
-          "resizeMode": "contain",
-          "backgroundImage": "./assets/images/fundo.png"
+          "resizeMode": "contain"
         }
       ]
     ],
